# pacdiffviewer

./: Cargo.toml  build.rs
src/: config.rs  error.rs  main.rs  pacdiff.rs
